# Event-Ingestion

./: .env.example  Cargo.toml  PERFORMANCE.md  README.md
src/: batcher.rs  db.rs  main.rs  utils.rs
src/handlers/: events.rs  health.rs  mod.rs
src/sql/events/: down.sql  up.sql
