[package]
name = "event-ingestion"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
dotenv = "0.15.0"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1.51.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
